# libnss-external

./: AUTHORS  ChangeLog  Makefile.am  README.md  configure.ac
contrib/: libnss-external.spec
man/: Makefile.am  nss_external.5
src/: Makefile.am  group.c  nss_external.h  passwd.c  shadow.c  util.c
